<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="my.awesome.rootdownloader.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:orientation="vertical">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="120pt"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:paddingVertical="30dp"
                app:columnCount="1"
                app:rowCount="3">

                <androidx.cardview.widget.CardView
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:id="@+id/fbCard"
                    android:tag="@string/facebook"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/fb"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/fb" />

                        <TextView
                            android:id="@+id/fbText"
                            style="@style/textColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/facebook"
                            android:textAlignment="center" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:tag="@string/insta"
                    app:cardCornerRadius="12dp"
                    android:id="@+id/instaCard"
                    app:cardElevation="6dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/insta"
                            android:layout_width="160dp"
                            android:layout_height="145dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="7dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/insta" />

                        <TextView
                            android:id="@+id/instaText"
                            style="@style/textColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/insta"
                            android:textAlignment="center" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:id="@+id/linkCard"
                    android:tag="@string/by_file_link"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/link"
                            android:layout_width="160dp"
                            android:layout_height="145dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="7dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/link" />

                        <TextView
                            android:id="@+id/linkText"
                            style="@style/textColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/by_file_link"
                            android:textAlignment="center" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.gridlayout.widget.GridLayout>
        </LinearLayout>

    </ScrollView>


</FrameLayout>